--- a/style.css
+++ b/style.css
@@ -156,6 +156,16 @@ t{
 	font-size: 15px;
 	color: #555;
 }
+.dtleft_b {
+	margin-left: 6px;
+	font-size: 17px;
+}
+.dtright_b {
+	position:absolute;
+ 	right:5%;
+ 	margin-top: 7px;
+	font-size: 17px;
+}
 .demo_line{
     height: 1px;
     border-top: 1px solid #ddd;
